fixed bug and aligned the grid better

--- a/Frontend/MovieApp/src/app/movie-feed/movie-feed.component.css
+++ b/Frontend/MovieApp/src/app/movie-feed/movie-feed.component.css
@@ -2,6 +2,7 @@
     display: grid;
     column-gap: 14px;
     row-gap: 14px;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 250px));
     justify-content: space-around;
+    justify-items: stretch;
 }
