--- a/Frontend/MovieApp/src/app/movie/movie.component.css
+++ b/Frontend/MovieApp/src/app/movie/movie.component.css
@@ -1,3 +1,5 @@
 .movie-summary {
     border-style: solid;
+    padding: 10px;
+    text-align: center;
 }
